--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 html {
     background-color: black;
+    color: white;
+    font-size: 18px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode','Times New Roman' sans-serif;
 }
-div {
-    color: antiquewhite;
-}
+
+
 .welcome{
     display: flex;
     flex-direction: column;
@@ -63,14 +64,7 @@ div {
   transform: translateY(0);
 }
 
-.score{
-    display: flex;
-    font-size: 2 em;
 
-}
 
-.veredict{
-    display: flex;
-    font-size: larger;
-}
+
 
